[project]
name = "megatech-vulkan-dispatch-tools"
license = { file = "LICENSE" }
version = "1.0.0"
dependencies = [
  "importlib-metadata; python_version<'3.10'",
  "defusedxml>0.7.0",
  "Mako>1.3.0"
]
[project.optional-dependencies]
tests = [
  "coverage >= 7.6.0"
]
[project.scripts]
dispatch-table-generator = "megatech.vulkan.applications.DispatchTableGenerator:main"
[tool.coverage.run]
branch = true
include = [ "megatech/*" ]
command_line = "-m unittest discover -s tests/"
[tool.coverage.report]
show_missing = true
